--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </header>
 <nav>
     <ul>
-        <li>Blog <p><a href = "file:///C:/Users/mineh/OneDrive/Desktop/mi349_blog/index.html">Blog</a></p> </li>
-        <li>About <p><a href = "file:///C:/Users/mineh/OneDrive/Desktop/mi349_blog/about.html">About</a></p> </li>
+        <li>Blog <p><a href = "index.html">Blog</a></p> </li>
+        <li>About <p><a href = "about.html">About</a></p> </li>
     </ul>
 </nav>
 <section>
