Added contact file and form

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <ul>
         <li>Blog <p><a href = "index.html">Blog</a></p></li>
         <li>About <p><a href = "about.html">About</a></p></li>
+        <li>Contact <p><a href = "contact.html">Contact</a></p> </li>
     </ul>
 </nav>
 <h2>Bio</h2>
