--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li>Blog <p><a href = "index.html">Blog</a></p> </li>
         <li>About <p><a href = "about.html">About</a></p> </li>
+        <li>Contact <p><a href = "contact.html">Contact</a></p> </li>
     </ul>
 </nav>
 <section>
@@ -36,6 +37,28 @@
             the best defensive and offensive raitings in the entire leauge. 
             
         </p>
+        <table>
+            <tr>
+                <th>Player</th>
+                <th>Championships</th>
+                <th>MVPs</th>
+            </tr>
+            <tr>
+                <td>Lebron James</td>
+                <td>4</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>Micheal Jordan</td>
+                <td>6</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>Bill Russell</td>
+                <td>11</td>
+                <td>5</td>
+            </tr>
+        </table>
     </acticle>
     <acticle>
         <h2>Senoir Year of Football</h2>
@@ -59,7 +82,14 @@
         </p>
     </acticle>
 </section>
-
+<section>
+    <form>
+        <label>Sign up for our newsletter:
+            <input type="text">
+        </label>
+        <button>Subscribe</button>
+    </form>
+</section>
 
 </body>
 </html>
