--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>Contact <p><a href = "contact.html">Contact</a></p> </li>
     </ul>
 </nav>
-<section id="blog">
+<section class="blog-post" id="blog">
     <h2>Lebron James Is The Greatest Laker</h2>
     <acticle class="blog-post">
         <author>Matthew Nehrt</author> 
